# wurdle-server/src/http/server.rs
@@ -14,6 +14,8 @@ use crate::session;
 
 const MAX_GUESSES: u8 = 6;
 
+const UNKNOWN_ERROR: &str = "abe15c99-eaa4-4fb0-a657-b88430fb8910";
+
 pub async fn run<T: 'static + Database + Send + Sync + Clone>(
     db: T,
     sessions: session::manager::SessionManager,
@@ -46,7 +48,7 @@ impl<T: Database + Send + Sync + Clone> Api<T> {
         Self { db, sessions }
     }
 
-    fn word_for_id(
+    fn session_for_word_id(
         &self,
         word_id: &str,
     ) -> Result<
@@ -58,7 +60,7 @@ impl<T: Database + Send + Sync + Clone> Api<T> {
             Err(err) => {
                 // TODO: WRONG
                 return Err(wurdle_openapi::models::Error {
-                    id: "abc".to_string(),
+                    id: UNKNOWN_ERROR.to_string(),
                     message: format!("{}", err),
                     details: None,
                 });
@@ -72,13 +74,28 @@ impl<T: Database + Send + Sync + Clone> Api<T> {
         word_id: &str,
     ) -> Result<wurdle_openapi::models::SessionStart, wurdle_openapi::models::Error> {
         let session = session::session::Session::new(word_id);
-        match self.sessions.serialize(session) {
+        match self.sessions.serialize(&session) {
             Ok(session_id) => Ok(wurdle_openapi::models::SessionStart {
                 session_id,
                 word_id: word_id.to_string(),
             }),
             Err(err) => Err(wurdle_openapi::models::Error {
-                id: "abc".to_string(),
+                id: UNKNOWN_ERROR.to_string(),
+                message: format!("{}", err),
+                details: None,
+            }),
+        }
+    }
+
+    fn get_session(
+        &self,
+        session_id: &str,
+    ) -> Result<session::session::Session, wurdle_openapi::models::Error> {
+        match self.sessions.deserialize(&session_id) {
+            Ok(session) => Ok(session),
+            // TODO: wrong
+            Err(err) => Err(wurdle_openapi::models::Error {
+                id: UNKNOWN_ERROR.to_string(),
                 message: format!("{}", err),
                 details: None,
             }),
@@ -103,7 +120,119 @@ where
             inline_object2,
             context.get().0.clone()
         );
-        Err(ApiError("not implemented".to_string()))
+
+        let mut session = match self.get_session(&inline_object2.session_id) {
+            Ok(session) => session,
+            Err(err) => {
+                // TODO: wrong
+                return Ok(wurdle_openapi::DoGuessResponse::InvalidGuess(err));
+            }
+        };
+        Ok(match session.status {
+            session::session::Status::InProgress { used_guesses } => {
+                let exists = match self.db.guess_exists(&inline_object2.guess) {
+                    Ok(exists) => exists,
+                    Err(err) => {
+                        // TODO: wrong
+                        return Ok(wurdle_openapi::DoGuessResponse::ServerError(
+                            wurdle_openapi::models::Error {
+                                id: UNKNOWN_ERROR.to_string(),
+                                message: format!("{}", err),
+                                details: None,
+                            },
+                        ));
+                    }
+                };
+
+                if !exists {
+                    return Ok(wurdle_openapi::DoGuessResponse::InvalidGuess(
+                        wurdle_openapi::models::Error {
+                            id: UNKNOWN_ERROR.to_string(),
+                            message: "word not on the list".to_string(),
+                            details: None,
+                        },
+                    ));
+                }
+
+                let word = match self.db.word_for_id(&session.word_id) {
+                    Ok(word) => word,
+                    Err(err) => {
+                        // TODO: WRONG
+                        return Ok(wurdle_openapi::DoGuessResponse::InvalidGuess(
+                            wurdle_openapi::models::Error {
+                                id: UNKNOWN_ERROR.to_string(),
+                                message: format!("{}", err),
+                                details: None,
+                            },
+                        ));
+                    }
+                };
+
+                let session_id = match self.sessions.serialize(&session) {
+                    Ok(session_id) => session_id,
+                    Err(err) => {
+                        return Ok(wurdle_openapi::DoGuessResponse::ServerError(
+                            wurdle_openapi::models::Error {
+                                id: UNKNOWN_ERROR.to_string(),
+                                message: format!("{}", err),
+                                details: None,
+                            },
+                        ))
+                    }
+                };
+
+                let used_guesses = used_guesses + 1;
+
+                let mut result: Vec<String> = vec![];
+                if word.word == inline_object2.guess {
+                    session.status = session::session::Status::Won { used_guesses };
+                    result = vec![
+                        "valid".to_string(),
+                        "valid".to_string(),
+                        "valid".to_string(),
+                        "valid".to_string(),
+                        "valid".to_string(),
+                    ];
+                } else {
+                    session.status = if used_guesses >= MAX_GUESSES {
+                        session::session::Status::Failed
+                    } else {
+                        session::session::Status::InProgress { used_guesses }
+                    };
+                    for (expected, received) in word
+                        .word
+                        .as_bytes()
+                        .iter()
+                        .zip(inline_object2.guess.as_bytes().iter())
+                    {
+                        if expected == received {
+                            result.push("valid".to_string())
+                        } else if word.word.contains(*received as char) {
+                            // TODO: wrong, should count how many times we report that
+                            result.push("wrong_place".to_string())
+                        } else {
+                            result.push("wrong".to_string())
+                        }
+                    }
+                }
+
+                wurdle_openapi::DoGuessResponse::ValidGuess(
+                    wurdle_openapi::models::InlineResponse200 {
+                        guess_number: used_guesses.into(),
+                        status: session.status.to_string(),
+                        result,
+                        session_id,
+                    },
+                )
+            }
+            session::session::Status::Failed | session::session::Status::Won { .. } => {
+                wurdle_openapi::DoGuessResponse::InvalidGuess(wurdle_openapi::models::Error {
+                    id: UNKNOWN_ERROR.to_string(),
+                    message: "session is already finished".to_string(),
+                    details: None,
+                })
+            }
+        })
     }
 
     async fn get_session_info(
@@ -118,34 +247,21 @@ where
             context.get().0.clone()
         );
 
-        let session = match self.sessions.deserialize(&session_id) {
+        let session = match self.get_session(&session_id) {
             Ok(session) => session,
-            // TODO: wrong
             Err(err) => {
-                return Ok(
-                    wurdle_openapi::GetSessionInfoResponse::UsingAnInvalidSession(
-                        wurdle_openapi::models::Error {
-                            id: "abc".to_string(),
-                            message: format!("{}", err),
-                            details: None,
-                        },
-                    ),
-                )
+                // TODO: wrong
+                return Ok(wurdle_openapi::GetSessionInfoResponse::UsingAnInvalidSession(err));
             }
         };
         Ok(wurdle_openapi::GetSessionInfoResponse::SuccessfulOperation(
             wurdle_openapi::models::InlineResponse2001 {
                 word_id: session.word_id.to_string(),
-                status: match session.status {
-                    session::session::Status::InProgress { .. } => "in_progress",
-                    session::session::Status::Failed => "failed",
-                    session::session::Status::Won { .. } => "guessed",
-                }
-                .to_string(),
+                status: session.status.to_string(),
                 guess_number: match session.status {
-                    session::session::Status::InProgress { used_guesses } => used_guesses,
+                    session::session::Status::InProgress { used_guesses }
+                    | session::session::Status::Won { used_guesses } => used_guesses,
                     session::session::Status::Failed => MAX_GUESSES,
-                    session::session::Status::Won { used_guesses } => used_guesses,
                 }
                 .into(),
             },
@@ -166,7 +282,7 @@ where
             Err(err) => {
                 return Ok(wurdle_openapi::StartRandomResponse::ServerError(
                     wurdle_openapi::models::Error {
-                        id: "abc".to_string(),
+                        id: UNKNOWN_ERROR.to_string(),
                         message: format!("{}", err),
                         details: None,
                     },
@@ -174,7 +290,7 @@ where
             }
         };
         let n: usize = rng.gen_range(0..word_length);
-        Ok(match self.word_for_id(n.to_string().as_str()) {
+        Ok(match self.session_for_word_id(n.to_string().as_str()) {
             Ok(inner) => match inner {
                 Ok(session) => {
                     wurdle_openapi::StartRandomResponse::SessionCreatedSuccessfully(session)
@@ -197,15 +313,17 @@ where
             context.get().0.clone()
         );
 
-        Ok(match self.word_for_id(inline_object.word_id.as_str()) {
-            Ok(inner) => match inner {
-                Ok(session) => {
-                    wurdle_openapi::StartWithIDResponse::SessionCreatedSuccessfully(session)
-                }
-                Err(err) => wurdle_openapi::StartWithIDResponse::ServerError(err),
+        Ok(
+            match self.session_for_word_id(inline_object.word_id.as_str()) {
+                Ok(inner) => match inner {
+                    Ok(session) => {
+                        wurdle_openapi::StartWithIDResponse::SessionCreatedSuccessfully(session)
+                    }
+                    Err(err) => wurdle_openapi::StartWithIDResponse::ServerError(err),
+                },
+                Err(err) => wurdle_openapi::StartWithIDResponse::InvalidID(err),
             },
-            Err(err) => wurdle_openapi::StartWithIDResponse::InvalidID(err),
-        })
+        )
     }
 
     async fn start_with_word(
@@ -225,7 +343,7 @@ where
             Err(err) => {
                 return Ok(wurdle_openapi::StartWithWordResponse::InvalidWord(
                     wurdle_openapi::models::Error {
-                        id: "abc".to_string(),
+                        id: UNKNOWN_ERROR.to_string(),
                         message: format!("{}", err),
                         details: None,
                     },
